--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "dist": "gulp dist",
     "test": "gulp test"
   },
-  "dependencies": {},
+  "dependencies": {
+    "angular-material": "^1.2.5",
+    "angular-ui-calendar": "^1.0.2"
+  },
   "resolutions": {
     "graceful-fs": "^4.2.9"
   },
